@@ -1,3 +1,12 @@
+2009-02-16  Akira TAGOH  <tagoh@redhat.com>
+
+	* tests/rhbz_471833.c: add new testcase.
+
+	* src/monitor.c (_imsettings_monitor_lookup): set an error if no
+	return value.
+	(imsettings_monitor_lookup): use stocked directory name instead of
+	hardcoded one.
+
 2009-02-13  Akira TAGOH  <tagoh@redhat.com>
 
 	Allow a lowercase input method name. (RHBZ#471833)
